# meridian

./: .gitignore  README.md  meridian_prd.md  meridian_prd_v2.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: __init__.py  health.py  tasks.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  task.py  task_mutation_log.py
backend/app/repositories/: __init__.py  task_mutation_log.py  tasks.py
backend/app/schemas/: health.py  task.py  task_mutation_log.py
backend/app/services/: __init__.py  tasks.py
backend/tests/: conftest.py  test_health.py  test_task_api.py  test_task_schemas.py
frontend/: .env.example  .gitignore  App.tsx  app.json  package.json
frontend/src/lib/: auth.ts  tasks.ts
supabase/: config.toml
supabase/migrations/: 20260409193000_initial_schema.sql
